# review-bot

./: .dockerignore  Dockerfile  Makefile  README.md  main.py  pyproject.toml  requirements.txt
review_bot/: __init__.py  github_client.py  issue_comment.py  models.py  pr_open.py
review_bot/helpers/: __init__.py  jira.py  review.py
